estilo verde en camino

--- a/index.pug
+++ b/index.pug
@@ -6,18 +6,59 @@ head
 	meta(name="viewport" content="width=device-width, initial-scale=1.0")
 	meta(name="description" content="E-comerce")
 	meta(name="robots" content="index,follow")
+	link(rel="stylesheet", href="./styles.css")
+	link(rel="preconnect", href="https://fonts.googleapis.com")
+	link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+	link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet")
+	title Maxi Cusco
 body
 	header
-		h1 Food Delivery
-		p La Mejor Comida
+		.logo
+			img(src="./icons/logo2.png", alt="Logo Maxi Cusco")
+			h1 Maxi Cusco
+		.menu
+			img(src="./icons/menu.png", alt="Menú")
+		
 	main 
 		section.categorias
-			.categorias__container 
-			.categorias__container 
-			.categorias__container 
-			.categorias__container 
+			.categorias__container
+		section.banner hola 	  
 		section.articulos
+			article.articulos__container
+				.articulos__img
+					img(src="./img/batidora-oster.jpg", alt="")
+				.descripcion 
+					h3 Batidora Oster
+					h2 S/.130
+					h3 Batidora Oster
+					h2 S/.130
+			article.articulos__container
+				.articulos__img
+					img(src="./img/batidora-oster.jpg", alt="")
+				.descripcion 
+					h3 Batidora Oster
+					
+			article.articulos__container
+				.articulos__img
+					img(src="./img/batidora-oster.jpg", alt="")
+				.descripcion 
+					h3 Batidora Oster
+					h2 S/.130
+			article.articulos__container
+				.articulos__img
+					img(src="./img/batidora-oster.jpg", alt="")
+				.descripcion 
+					h3 Batidora Oster
+					h2 S/.130
+					h3 Batidora Oster
+					h2 S/.130
+					h3 Batidora Oster
+					h2 S/.130
 	footer 
+		img(src="./icons/facebook.png", alt="")
+		img(src="./icons/whatsapp.png", alt="")
+		img(src="./icons/apple-phone.png", alt="")
+		img(src="./icons/telegram-app.png", alt="")
 
 
 
