--- a/componentes/_globales.scss
+++ b/componentes/_globales.scss
@@ -3,6 +3,8 @@ $Color2: #2DC661;
 $Color-medio: #3A61C5;
 $Color-claro: white;
 $Fuente1: 'Roboto', sans-serif;
+$Fuente2: 'Baloo Bhaina 2';
+$Color-precio:#C71E1A;
 
 @mixin borde1 {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
@@ -22,6 +24,7 @@ html {
 }
 
 body {
+    
     background: radial-gradient(78.14% 78.14% at 100% 32.09%, $Color1 64.06%, $Color2 100%);
     
     
