--- a/index.pug
+++ b/index.pug
@@ -1,64 +1,53 @@
+mixin card(titulo,precio,imagen,clave)
+	article.articulos__container
+		img(src="./img/"+imagen, alt=""+titulo)
+		.detalles 
+			p=titulo
+			h1=precio
+				
+
 doctype html 
 <html lang="es">
-head 
-	meta(charset="UTF-8")
-	meta(http-equiv="X-UA-Compatible" content="IE=edge")
-	meta(name="viewport" content="width=device-width, initial-scale=1.0")
-	meta(name="description" content="E-comerce")
-	meta(name="robots" content="index,follow")
-	link(rel="stylesheet", href="./styles.css")
-	link(rel="preconnect", href="https://fonts.googleapis.com")
-	link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-	link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet")
-	title Maxi Cusco
-body
-	header
-		.logo
-			img(src="./icons/logo2.png", alt="Logo Maxi Cusco")
-			h1 Maxi Cusco
-		.menu
-			img(src="./icons/menu.png", alt="Menú")
+	head 
+		meta(charset="UTF-8")
+		meta(http-equiv="X-UA-Compatible" content="IE=edge")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		meta(name="description" content="E-comerce")
+		meta(name="robots" content="index,follow")
+		link(rel="stylesheet", href="./styles.css")
+		link(rel="preconnect", href="https://fonts.googleapis.com")
+		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+		link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet")
 		
-	main 
-		section.categorias
-			.categorias__container
-		section.banner hola 	  
-		section.articulos
-			article.articulos__container
-				.articulos__img
-					img(src="./img/batidora-oster.jpg", alt="")
-				.descripcion 
-					h3 Batidora Oster
-					h2 S/.130
-					h3 Batidora Oster
-					h2 S/.130
-			article.articulos__container
-				.articulos__img
-					img(src="./img/batidora-oster.jpg", alt="")
-				.descripcion 
-					h3 Batidora Oster
-					
-			article.articulos__container
-				.articulos__img
-					img(src="./img/batidora-oster.jpg", alt="")
-				.descripcion 
-					h3 Batidora Oster
-					h2 S/.130
-			article.articulos__container
-				.articulos__img
-					img(src="./img/batidora-oster.jpg", alt="")
-				.descripcion 
-					h3 Batidora Oster
-					h2 S/.130
-					h3 Batidora Oster
-					h2 S/.130
-					h3 Batidora Oster
-					h2 S/.130
-	footer 
-		img(src="./icons/facebook.png", alt="")
-		img(src="./icons/whatsapp.png", alt="")
-		img(src="./icons/apple-phone.png", alt="")
-		img(src="./icons/telegram-app.png", alt="")
+		title Maxi Cusco
+	body
+		header
+			.logo
+				img(src="./icons/logo2.png", alt="Logo Maxi Cusco")
+				h1 Maxi Cusco
+			.menu
+				img(src="./icons/menu.png", alt="Menú")
+			
+		main 
+			section.categorias
+				.categorias__container
+			section.banner hola 	  
+			section(id="articulos")
+					+card("Tomatodos de Acero","s/.130.00","tomatodo-acero.jpg")
+					+card("Batidora Oster","s/.130.00","batidora-oster.jpg")
+					+card("Juego de Ollas Aluminio","s/.130.00","juegoollasaluminio.jpg")
+					+card("Juego de Ollas Aluminio con Tapa Roja","s/.130.00","juegoollasaluminio2.jpg")
+					+card("Olla a Presion Clock","s/.130.00","ollaclock.jpg")
+					+card("Cocina Electrica  Modelo Plancha","s/.130.00","cocina-electrica-2.jpg")
+					+card("Planca Record","s/.130.00","plancharecord.jpg")
+					+card("Cuchilla Oster","s/.130.00","cuchilla4.jpg")
+		footer 
+			img(src="./icons/facebook.png", alt="")
+			img(src="./icons/whatsapp.png", alt="")
+			img(src="./icons/apple-phone.png", alt="")
+			img(src="./icons/telegram-app.png", alt="")
+		script(src="./index.js") 
 
 
 
