Empezando en Responsive Design

--- a/componentes/_globales.scss
+++ b/componentes/_globales.scss
@@ -4,7 +4,7 @@ $Color-medio: #3A61C5;
 $Color-claro: white;
 $Fuente1: 'Roboto', sans-serif;
 $Fuente2: 'Baloo Bhaina 2';
-$Color-precio:#C71E1A;
+$Color-nombre:#17141b;
 
 @mixin borde1 {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
