--- a/electro.pug
+++ b/electro.pug
@@ -3,14 +3,15 @@ block contenidos
 	body
 		main 
 			section(id="articulos")
-				+card("Tomatodos de Acero","s/.130.00","Extractor-Oster-600W.jpg")
-				+card("Batidora Oster","s/.130.00","licuadora-Oster-3V-700W.jpg")
-				+card("Juego de Ollas Aluminio","s/.130.00","licuadora-jhumy.jpg")
-				+card("Juego de Ollas Aluminio con Tapa Roja","s/.130.00","licuadora-Oster-boton-Rojo.jpg")
-				+card("Olla a Presion Clock","s/.130.00","hervidor-scarlett-2.jpg")
-				+card("Cocina Electrica  Modelo Plancha","s/.130.00","licuadora-Oster-PRO-700W.jpg")
-				+card("Planca Record","s/.130.00","20210927_123454.jpg")
-				+card("Planca Record","s/.130.00","Plancha-Oster-5954-vertical.jpg")
+				+card("Extractor Oster 600 watts","20% de Descuento","Extractor-Oster-600W.jpg")
+				+card("Batidora Oster Clasica 700 watts","Delivery GRATIS!","licuadora-Oster-3V-700W.jpg")
+				+card("Licuadora Industrial Jhumy","Delivery GRATIS!","licuadora-jhumy.jpg")
+				+card("Licuadora Oster Pica Hielo","Delivery GRATIS!","licuadora-Oster-boton-Rojo.jpg")
+				+card("Hervidor de Acero 2 Litros","s/.30.00","hervidor-scarlett-2.jpg")
+				+card("Licuadora Oster Pro 700 watts","Delivery GRATIS!","licuadora-Oster-PRO-700W.jpg")
+				+card("Extractor Oster","s/.219.00","20210927_123454.jpg")
+				+card("Planca Oster a Vapor","s/.69","Plancha-Oster-5954-vertical.jpg")
+				
 			section.banner
 				.banner__container
 	 
