--- a/index.pug
+++ b/index.pug
@@ -7,15 +7,14 @@ block contenidos
 				
 					  	  
 			section(id="articulos")
-					+card("Tomatodos de Acero","s/.130.00","ROP-MADERA-3-CUERPOS.jpg")
-					+card("Batidora Oster","s/.130.00","Rop-3C-Madera-MAS-PARRILLAS.jpg")
-					+card("Juego de Ollas Aluminio","s/.130.00","Ropero-Esquinero-EST.jpg")
-					+card("Juego de Ollas Aluminio con Tapa Roja","s/.130.00","Ropero-tubos-3-cuerpos.jpg")
-					+card("Olla a Presion Clock","s/.130.00","Ropero-Mediano-3-Cuerpos.jpg")
-					+card("Cocina Electrica  Modelo Plancha","s/.130.00","Rop-4-colgadores.jpg")
-					+card("Planca Record","s/.130.00","Rop-Tubos-2-Cuerpos.jpg")
-					+card("Cocina Electrica  Modelo Plancha","s/.130.00","Zapateras.jpg")
-					+card("Planca Record","s/.130.00","Estante-de-Bannio-blanco.jpg")
+					+card("Ropero 2 Cuerpos","S/.79.00","Rop-Tubos-2-Cuerpos.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%202%20Cuerpos%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero Madera con Zapatera","Delivery GRATIS!","Rop-3C-Madera-MAS-PARRILLAS.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%20Madera%20con%20Zapatera%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero Esquinero","S/.89.00","Ropero-Esquinero-EST.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%20Esquinero%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero 2 Colgadores Metal","Delivery GRATIS!","Ropero-tubos-3-cuerpos.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%202%20Colgadores%20Metal%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero 3 Cuerpos Mediano","Delivery GRATIS!","Ropero-Mediano-3-Cuerpos.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%203%20Cuerpos%20Mediano%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero Armable 4 Colgadores","S/.99.00","Rop-4-colgadores.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%204%20Colgadores%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Zapatera 9,7 y 5 Niveles","Delivery GRATIS!","Zapateras.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Zapateras%22,%20necesito%20m%C3%A1s%20detalles.")
+					+card("Ropero Madera 3 Cuerpos","Delivery GRATIS!","ROP-MADERA-3-CUERPOS.jpg","https://api.whatsapp.com/send/?phone=51993862663&text=Hola%20estoy%20interesado%20en%20%22Ropero%20Madera%203%20Cuerpos%22,%20necesito%20m%C3%A1s%20detalles.")
 				
 	 
 
