--- a/styles.css
+++ b/styles.css
@@ -110,8 +110,8 @@ main {
   -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
           box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
   border-radius: 15px;
-  width: 100%;
-  height: 180px;
+  aspect-ratio: 16/9;
+  min-height: 150px;
   border-radius: 15px;
   width: 95%;
   margin: 0 14px 0 10px;
@@ -140,10 +140,10 @@ main {
     background-image: url(img/banner/3.jpg);
   }
   70% {
-    background-image: url(img/banner/4.jpg);
+    background-image: url(img/banner/7.jpg);
   }
   100% {
-    background-image: url(img/banner/5.jpg);
+    background-image: url(img/banner/8.jpg);
   }
 }
 
@@ -158,10 +158,10 @@ main {
     background-image: url(img/banner/3.jpg);
   }
   70% {
-    background-image: url(img/banner/4.jpg);
+    background-image: url(img/banner/7.jpg);
   }
   100% {
-    background-image: url(img/banner/5.jpg);
+    background-image: url(img/banner/8.jpg);
   }
 }
 .articulos {
@@ -184,27 +184,97 @@ main {
   -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
           box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
   border-radius: 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .articulos__container .detalles {
-  margin-left: 10px;
-  margin-top: 7px;
+  padding-left: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 5px;
 }
 .articulos__container .detalles p {
-  font-size: 1rem;
+  font-size: 12px;
   font-weight: 500;
+  color: #17141b;
+  font-family: "Roboto", sans-serif;
 }
-.articulos__container .detalles h1 {
+.articulos__container h1 {
   font-family: "Baloo Bhaina 2";
-  color: #C71E1A;
   font-style: normal;
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin-top: -5px;
+  font-size: 1.2rem;
+  padding: 0 5px;
+}
+.articulos__container .calltoaction {
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.articulos__container .calltoaction a {
+  width: 35px;
+  height: 32px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  text-decoration: none;
+  margin-bottom: 5px;
+}
+.articulos__container .calltoaction a img {
+  width: 20px;
+  height: 20px;
+}
+.articulos__container .calltoaction a .wsp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 24px;
+  min-width: 90px;
+  max-width: 110px;
+  padding: 2px 9px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #2DC661;
+  -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
+          box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5), -2px -2px 15px rgba(255, 255, 255, 0.25), -5px -5px 10px rgba(255, 255, 255, 0.25);
+  border-radius: 15px;
+}
+.articulos__container .calltoaction a .wsp p {
+  color: white;
+  font-weight: 500;
+  font-family: "Baloo Bhaina 2";
+  font-size: 1.2rem;
+  margin-right: 2px;
 }
 
 .articulos__container img {
   display: block;
   width: 100%;
+  max-width: 350px;
   border-radius: 20px;
 }
 
@@ -220,6 +290,9 @@ main {
 }
 .masonry-layout .masonry-item {
   margin-bottom: var(--gap);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .masonry-layout.columns-1 {
   --columns: 1;
