--- a/componentes/_articulos.scss
+++ b/componentes/_articulos.scss
@@ -4,7 +4,6 @@
     grid-gap: 4px;
     width: 100%;
     margin: 10px 10px 10px 10px;
-   
     @include borde1;
     
 }
@@ -13,32 +12,84 @@
     margin: 10px 10px 10px 0px;
     background-color: $Color-claro;
     @include borde1;
+    justify-content: center;
+    
+    
     .detalles{
-        margin-left: 10px;
-        margin-top: 7px;
+        padding-left: 4px;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 5px;
         p{
-            font-size: 1rem;
+            font-size: 12px;
             font-weight: 500;
+            color: $Color-nombre;
+            font-family: $Fuente1;
         }
+    }
+    
         
         h1 {
             font-family: $Fuente2;
-            color: $Color-precio;
             font-style: normal;
-            font-weight: 700;
-            font-size: 1.5rem;
-            margin-top: -5px;
+            font-size: 1.2rem;
+            padding:0 5px;
+            }
+       
+        .calltoaction{
+            height: auto;
+            display: flex;
+            justify-content: center;
+            a { 
+                width: 35px;
+                height: 32px;
+                justify-content: center;
+                display: flex;
+                align-items: center;
+                border-radius: 10px;
+                text-decoration: none;
+                margin-bottom: 5px;
+                            img{
+                            width: 20px;
+                            height: 20px;
+                            
+                            }
+                .wsp{
+                    display: flex;
+                    height: 24px;
+                    min-width: 90px;
+                    max-width: 110px;
+                    padding: 2px 9px;
+                    justify-content: space-evenly;
+                    align-items:center;
+                    background-color: $Color2;
+                    @include borde1;
+                        p{
+                        color: $Color-claro;
+                        font-weight: 500;
+                        font-family: $Fuente2;
+                        font-size: 1.2rem;
+                        margin-right: 2px;
+                    }
+                        
+                            
+                
+              }
+            }
             
-        }
-
+            
+        }      
     }
 
-}
-.articulos__container img {
-    display: block;
-    width: 100%;
-    border-radius: 20px;
-}
+    .articulos__container img {
+        display: block;
+        width: 100%;
+        max-width: 350px;
+        border-radius: 20px;
+    }
+
         
     
     .masonry-layout{
@@ -51,8 +102,10 @@
         grid-template-columns: repeat(var(--columns),1fr);
         grid-gap: var(--gap/2);
         padding-left: 10px;
+        
         .masonry-item {
             margin-bottom: var(--gap);
+            justify-content: center;
         }
     
         @for $i from 1 through $columns {
