--- a/componentes/_banner.scss
+++ b/componentes/_banner.scss
@@ -1,8 +1,9 @@
 .banner {
     
     @include borde1;
-    width: 100%;
-    height: 180px;
+    aspect-ratio: 16 / 9;
+    min-height: 150px;
+   
     border-radius: 15px;
     width: 95%;
     margin: 0 14px 0 10px;
@@ -27,10 +28,10 @@
     background-image: url(img/banner/3.jpg);
    }
    70% {
-    background-image: url(img/banner/4.jpg);
+    background-image: url(img/banner/7.jpg);
    }
    100% {
-    background-image: url(img/banner/5.jpg);
+    background-image: url(img/banner/8.jpg);
    }
    
     
